--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body{
    padding-left: 2em;
 
 }
+.circle{
+    background-color: var(--button-color);
+
+}
 .nav{
     display: flex;
     padding: 1em;
