--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ body{
  }
 .row{
     display: flex;
+    margin: 0;
 
 }
 .container{
@@ -83,9 +84,9 @@ body{
 }
  .promoimg{
     width: 50%; /*image width*/
-    float: left; /*image position*/
+    /*image position*/
     margin: 0;
-    align: left;
+    
    
  }
  .promo{
@@ -93,7 +94,16 @@ body{
     float: right;
     font-size: 12px;
 	padding-top: 2em ;
-	line-height: 12px;
 	margin: 25px 0;
 	padding-bottom: 2em;
+    text-align: center;
  }
+.promo h1{
+    color: var(--span2-color);
+}
+
+/* section */
+
+.headings{
+    text-align: center;
+}
