--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ header .right_menu li a{
 }
 /* section 4 */
 
-#sec_4{
+.wrapper2{
     position: relative;
     width: 100%;
     padding: 100px;
@@ -229,49 +229,59 @@ header .right_menu li a{
     padding-bottom: 10px;
     margin-bottom: 0;
     width: 100%;
-    padding:20px;
     box-sizing: border-box;
     background: var(--color5);
     display: flex;
+
 }
-.imgBx h1{
-    align-items: center;
-    padding-left: 80%;
-    padding-top: 0%;
-}
-#sec_4 .imgBx{
-    width: 60%;
-}
-#sec_4 .imgBx img{
-    max-width: 100%;
-    padding-left: 50px;
+.team_member .row{
     margin-bottom: 0;
-    padding-top: 0;
-    line-height: 200px ;
-}
-.sec_4 .content4{
-    padding-left: 20px;
-    line-height: 200px;
-}
-.combo{
-    color: var(--color4);
-    text-transform: uppercase;
-    font-size: 28px;
-}
-.content4 h2{
-    padding: 5px;
-}
-.combopara{
-    margin: 0;
-    padding: 20px 0 0;
+    padding-bottom: 0;
     text-align: center;
 }
 
-.burg{
-    width: 150px;
-    height:150px;
-    position: absolute;
-    left: 50px;
+.team .team_member{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    background: var(--color5);
+    margin: 5px;
+    margin-bottom: 50px;
+    width: 100%;
+    position: relative;
+}
+.team .team_member h1{
+   color: green;
+   text-transform: uppercase;
+   margin-bottom: 50px;
+}
+.team .team_member h2{
+   font-size: 26px;
+   margin: 12px 0;
+   
+}
+
+.team .team_member p{
+   text-align: center;
+}
+.team .team_member .burgerimg2{
+   width: 300px;
+   height: 300px;
+   position: absolute;
+   bottom: -30px;
+   right: 50%;
+   
+}
+.team .team_member .burgerimg2 img{
+   width: 300px;
+   height: 300px;
+   padding-top: 30px;
+   margin-right: 50px;
+   padding-right: -50px;
+   padding-left: 0;
+   margin-left: 0;
 }
 
 /* contact */
