--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -32,7 +33,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -252,7 +253,12 @@ header .right_menu li a{
     width: 100%;
     position: relative;
 }
-.team .team_member h1{
+
+#hot{
+    text-align: center;
+    padding-left: 70%;
+}
+.team .team_member h2{
    color: green;
    text-transform: uppercase;
    margin-bottom: 50px;
@@ -260,25 +266,26 @@ header .right_menu li a{
 }
 .team .team_member h2{
    font-size: 26px;
-   margin: 12px 0;
+   margin: 20px 0;
    
 }
 
 .team .team_member p{
    text-align: center;
+   margin: 20px 0;
 }
 .team .team_member .burgerimg2{
    width: 300px;
    height: 300px;
    position: absolute;
-   bottom: -30px;
+   bottom: -25px;
    right: 45%;
    
 }
 .team .team_member .burgerimg2 img{
-   width: 350px;
+   width: 400px;
    height: 300px;
-   padding-top: 30px;
+   padding-top: 20px;
    margin-right: 50px;
    padding-right: -50px;
    padding-left: 0;
@@ -298,11 +305,10 @@ header .right_menu li a{
     letter-spacing: 1px;
     text-align: center;
 }
-.wrappersec_5 h1{
-    margin-bottom: 40px;
+.wrappersec_5 h2{
     font-size: 24px;
 }
-.wrappersec_5 h1 span{
+.wrappersec_5 h2 span{
      color: var(--color4);
 }
 .wrappersec_5 p{
