--- a/style.css
+++ b/style.css
@@ -108,13 +108,14 @@ header .right_menu li a{
     text-decoration: none;
     color: white;
     border: none;
-    border-radius: 40px;
+    border-radius: 50px;
     font-weight: bold;
     letter-spacing: 1px;
-    height: 60px;
+    height: 40px;
     width: 170px;
     text-align: center;
     font-size: 18px;
+    margin-bottom: 50px;
 }
 .content .imgBox{
     width: 600px;
